--- a/app/views/customers/_list.html.haml
+++ b/app/views/customers/_list.html.haml
@@ -1,9 +1,9 @@
 
 %ul.nav.nav-tabs 
   %li
-    = simple_link :for => "Name", :href => '#pane-cust', :id => 'tab-cust'
+    = simple_link for: "Name", href: '#pane-cust', id: 'tab-cust'
   %li
-    = simple_link :for => "Statements", :href => '#pane-cust-activity', :id => 'tab-see-activity'
+    = simple_link for: "Statements", href: '#pane-cust-activity', id: 'tab-see-activity'
 
 .tab-content
   #pane-cust.tab-pane.scroll
