--- a/app/views/customers/_transactions.html.haml
+++ b/app/views/customers/_transactions.html.haml
@@ -6,6 +6,6 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Transactions", :href => '#'
+    = simple_link for: "Transactions", href: '#'
 .tab-content
   #transactions
