--- a/app/views/faq/_general.html.haml
+++ b/app/views/faq/_general.html.haml
@@ -2,13 +2,13 @@
 #faq-general.row-fluid
   %h3.orange= "Generally"
   .span8
-    .accordion{ :id => 'gn' }
+    .accordion{ id: 'gn' }
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#gn', :toggle => 'collapse' }, :href => '#gn-1' }
+          %a.accordion-toggle{ data: { :parent => '#gn', :toggle => 'collapse' }, href: '#gn-1' }
             Grading is tedious work. So why is Gradians doing it? 
-        .accordion-body.collapse{ :id => 'gn-1' }
+        .accordion-body.collapse{ id: 'gn-1' }
           .accordion-inner
             %p
               We do what we do because we believe that a teacher's time is a precious 
@@ -31,9 +31,9 @@
               If we can do that in classrooms around the world, then we would have done good
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#gn', :toggle => 'collapse' }, :href => '#gn-2' }
+          %a.accordion-toggle{ data: { :parent => '#gn', :toggle => 'collapse' }, href: '#gn-2' }
             What subjects do you cover?
-        .accordion-body.collapse{ :id => 'gn-2' }
+        .accordion-body.collapse{ id: 'gn-2' }
           .accordion-inner
             %p
               We are starting with Mathematics. And  going forward, we could extend the system  
@@ -47,7 +47,7 @@
 
       -#
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#gn', :toggle => 'collapse' }, :href => '#gn-4' }
-        .accordion-body.collapse{ :id => 'gn-4' }
+          %a.accordion-toggle{ data: { :parent => '#gn', :toggle => 'collapse' }, href: '#gn-4' }
+        .accordion-body.collapse{ id: 'gn-4' }
           .accordion-inner
 
