--- a/app/views/faq/_scanning.html.haml
+++ b/app/views/faq/_scanning.html.haml
@@ -2,20 +2,20 @@
 #faq-scanning.row-fluid
   %h3.orange= "On Scanning"
   .span8
-    .accordion{ :id => 'fs' }
+    .accordion{ id: 'fs' }
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-1' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-1' }
             Scanning - is it hard to do?
-        .accordion-body.collapse{ :id => 'fs-1' }
+        .accordion-body.collapse{ id: 'fs-1' }
           .accordion-inner
             Not at all. If you can use a printer or a photocopier, then you can use a scanner
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-2' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-2' }
             What kind of a scanner do I need?
-        .accordion-body.collapse{ :id => 'fs-2' }
+        .accordion-body.collapse{ id: 'fs-2' }
           .accordion-inner
             %p
               Any scanner that can take a bunch of sheets at a time
@@ -28,9 +28,9 @@
               at a time. Fine for scanning 5-6 sheets. But any more, and its painful to use
               
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-3' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-3' }
             Should I scan in color or black-and-white?
-        .accordion-body.collapse{ :id => 'fs-3' }
+        .accordion-body.collapse{ id: 'fs-3' }
           .accordion-inner
             %p
               Either is fine
@@ -40,9 +40,9 @@
               in just one PDF file. You will then upload this PDF file to send 
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-5' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-5' }
             After scanning, do I e-mail the scans to you?
-        .accordion-body.collapse{ :id => 'fs-5' }
+        .accordion-body.collapse{ id: 'fs-5' }
           .accordion-inner
             %p
               No. If after scanning you have saved scans in a PDF file, then
@@ -59,9 +59,9 @@
               Thats it! We now have the scans and our system will sort them and distribute them for grading
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-6' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-6' }
             Can students scan and upload their own worksheets so that I don't have to?
-        .accordion-body.collapse{ :id => 'fs-6' }
+        .accordion-body.collapse{ id: 'fs-6' }
           .accordion-inner
             %p
               Sure they can. If you think that your students have easy access to a scanner - either at 
@@ -81,11 +81,11 @@
 
       -#
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-1' }
-        .accordion-body.collapse{ :id => 'fs-1' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-1' }
+        .accordion-body.collapse{ id: 'fs-1' }
           .accordion-inner
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#fs', :toggle => 'collapse' }, :href => '#fs-1' }
-        .accordion-body.collapse{ :id => 'fs-1' }
+          %a.accordion-toggle{ data: { :parent => '#fs', :toggle => 'collapse' }, href: '#fs-1' }
+        .accordion-body.collapse{ id: 'fs-1' }
           .accordion-inner
