--- a/app/views/faq/_website.html.haml
+++ b/app/views/faq/_website.html.haml
@@ -2,13 +2,13 @@
 #faq-website.row-fluid
   %h3.orange= "Using the website"
   .span8
-    .accordion{ :id => 'wb' }
+    .accordion{ id: 'wb' }
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#wb', :toggle => 'collapse' }, :href => '#wb-1' }
+          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-1' }
             What is a Quiz?
-        .accordion-body.collapse{ :id => 'wb-1' }
+        .accordion-body.collapse{ id: 'wb-1' }
           .accordion-inner
             %p
               A quiz is nothing more than a collection of questions - with their solutions
@@ -23,9 +23,9 @@
               you could use the same quiz to make worksheets for that year's batch
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#wb', :toggle => 'collapse' }, :href => '#wb-2' }
+          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-2' }
             What is a Worksheet?
-        .accordion-body.collapse{ :id => 'wb-2' }
+        .accordion-body.collapse{ id: 'wb-2' }
           .accordion-inner
             %p
               Just like a quiz - but with blank space after every question for students 
@@ -36,9 +36,9 @@
               has made uptil now and then selects students she wants to make worksheets for
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#wb', :toggle => 'collapse' }, :href => '#wb-3' }
+          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-3' }
             What is a Group?
-        .accordion-body.collapse{ :id => 'wb-3' }
+        .accordion-body.collapse{ id: 'wb-3' }
           .accordion-inner
             %p
               A group is simply a collection of students. If you teach in a school or university environment, 
@@ -52,10 +52,10 @@
               Please note that one student can belong to more than group
 
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#wb', :toggle => 'collapse' }, :href => '#wb-5' }
+          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-5' }
             I am making a quiz and it will take a few minutes for the PDF to get ready. Do I have 
             stay logged-in for all that time and wait?
-        .accordion-body.collapse{ :id => 'wb-5' }
+        .accordion-body.collapse{ id: 'wb-5' }
           .accordion-inner
             %p
               No, you don't have to stay logged-in. All that the system is telling you is that 
@@ -70,8 +70,8 @@
 
       -#
         .accordion-heading
-          %a.accordion-toggle{ :data => { :parent => '#wb', :toggle => 'collapse' }, :href => '#wb-1' }
-        .accordion-body.collapse{ :id => 'wb-1' }
+          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-1' }
+        .accordion-body.collapse{ id: 'wb-1' }
           .accordion-inner
 
 
