--- a/app/views/layouts/faq.html.haml
+++ b/app/views/layouts/faq.html.haml
@@ -12,26 +12,26 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span4{ :href => "/"}
+              %a.brand.span4{ href: "/"}
                 = image_tag "logo-mit-beta-2.png"
       .row-fluid
-        .span3{ :id => 'faq-side-panel' }
+        .span3{ id: 'faq-side-panel' }
           %ul.nav.nav-list.offset1
             %li
-              = simple_link :for => "Home", :href => '/', :icon => 'icon-home'
+              = simple_link for: "Home", href: '/', :icon => 'icon-home'
             %li
-              = simple_link :for => "Who we are", :href => '#faq-about-us', :icon => 'icon-chevron-right'
+              = simple_link for: "Who we are", href: '#faq-about-us', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "Generally", :href => '#faq-general', :icon => 'icon-chevron-right'
+              = simple_link for: "Generally", href: '#faq-general', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "Using the website", :href => '#faq-website', :icon => 'icon-chevron-right'
+              = simple_link for: "Using the website", href: '#faq-website', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "On Grading", :href => '#faq-grading', :icon => 'icon-chevron-right'
+              = simple_link for: "On Grading", href: '#faq-grading', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "On Scanning", :href => '#faq-scanning', :icon => 'icon-chevron-right'
+              = simple_link for: "On Scanning", href: '#faq-scanning', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "Contact", :href => '#faq-contact', :icon => 'icon-chevron-right'
-        .span7.offset3{ :id => 'faq-content-panel' }
+              = simple_link for: "Contact", href: '#faq-contact', :icon => 'icon-chevron-right'
+        .span7.offset3{ id: 'faq-content-panel' }
           = render :partial => 'faq/aboutus'
           = render :partial => 'faq/general'
           = render :partial => 'faq/website'
