--- a/app/views/menus/teacher/shared/_qzb-filter.html.haml
+++ b/app/views/menus/teacher/shared/_qzb-filter.html.haml
@@ -1,8 +1,8 @@
 
 %ul#qzb-filter.dropdown-menu.pull-right{ :role => :menu }
   %li
-    = simple_link :for => "Show Favourites", :id => "lnk-qzb-fav"
+    = simple_link for: "Show Favourites", id: "lnk-qzb-fav"
   %li
-    = simple_link :for => "Show Selected", :id => 'lnk-qzb-selected'
+    = simple_link for: "Show Selected", id: 'lnk-qzb-selected'
   %li
-    = simple_link :for => "Show All", :id => 'lnk-qzb-showall'
+    = simple_link for: "Show All", id: 'lnk-qzb-showall'
