--- a/app/views/notifications/shared/_purchase-completed.html.haml
+++ b/app/views/notifications/shared/_purchase-completed.html.haml
@@ -1,7 +1,7 @@
 
-#n-purchase-complete.modal.fade.regular.row-fluid{ :data => { :autohide => 5000 } } 
+#n-purchase-complete.modal.fade.regular.row-fluid{ data: { :autohide => 5000 } } 
   .span3
-    = image_tag 'notifications/alert.png', :class => 'big-icon'
+    = image_tag 'notifications/alert.png', class: 'big-icon'
   .span8
     %p.title.underline= "Purchase Complete"
     %p
