--- a/app/views/notifications/student/_enrollment-blocked.html.haml
+++ b/app/views/notifications/student/_enrollment-blocked.html.haml
@@ -1,7 +1,7 @@
 
-#n-enrollment-blocked.modal.fade.regular.row-fluid{ :data => { :autohide => 9000 } } 
+#n-enrollment-blocked.modal.fade.regular.row-fluid{ data: { :autohide => 9000 } } 
   .span3
-    = image_tag 'notifications/block-user.png', :class => 'big-icon'
+    = image_tag 'notifications/block-user.png', class: 'big-icon'
   .span8
     %p.title.underline= "Unable to enroll"
     %p
