--- a/app/views/notifications/student/_sektion-not-found.html.haml
+++ b/app/views/notifications/student/_sektion-not-found.html.haml
@@ -1,7 +1,7 @@
 
-#n-missing-sektion.modal.fade.regular.row-fluid{ :data => { :autohide => 5000 } } 
+#n-missing-sektion.modal.fade.regular.row-fluid{ data: { :autohide => 5000 } } 
   .span3
-    = image_tag 'notifications/alert.png', :class => 'big-icon'
+    = image_tag 'notifications/alert.png', class: 'big-icon'
   .span8
     %p.title.underline= "Incorrect Group Code"
     %p
