--- a/app/views/tutorials/teacher/shared/editqz/_one.html.haml
+++ b/app/views/tutorials/teacher/shared/editqz/_one.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'editqz-milestone-1', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'left-1' } }
+%ol.hide{ id: 'editqz-milestone-1', data: { :onwards => :true }}
+  %li{ data: { id: 'left-1' } }
     %h6= "#1"
     %p
       When editing a quiz, you would either be removing 
