--- a/app/views/tutorials/teacher/shared/editqz/_three.html.haml
+++ b/app/views/tutorials/teacher/shared/editqz/_three.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'editqz-milestone-3', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'editqz-ul-milestone-2' } }
+%ol.hide{ id: 'editqz-milestone-3', data: { :onwards => :true }}
+  %li{ data: { id: 'editqz-ul-milestone-2' } }
     %h6= "#4"
     %p
       The next few steps are the same as what one would do when building a quiz
