--- a/app/views/tutorials/teacher/shared/editqz/_two.html.haml
+++ b/app/views/tutorials/teacher/shared/editqz/_two.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'editqz-milestone-2', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'editqz-1' } }
+%ol.hide{ id: 'editqz-milestone-2', data: { :onwards => :true }}
+  %li{ data: { id: 'editqz-1' } }
     %h6= "#2"
     %p
       These are the questions <b>currently in the quiz</b>
@@ -8,7 +8,7 @@
       Select the questions you would like to remove - if any. When 
       you are done, click the <b>Remove Selected</b> button above
   
-  %li{ :data => { :id => 'tab-editqz-2', :options => 'tipLocation:top;nubPosition:bottom' } }
+  %li{ data: { id: 'tab-editqz-2', :options => 'tipLocation:top;nubPosition:bottom' } }
     %h6= "#3"
     %p
       <b>To add questions</b>, click here
