--- a/app/views/tutorials/teacher/shared/qzb/_five.html.haml
+++ b/app/views/tutorials/teacher/shared/qzb/_five.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'qzb-milestone-5', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'qzb-div-milestone-5' } }
+%ol.hide{ id: 'qzb-milestone-5', data: { :enable => 'm-teacher-quizzes', :onwards => :true }}
+  %li{ data: { id: 'qzb-div-milestone-5' } }
     %h6= "#3"
     %p
       And here are the questions - grouped by the topics you picked
