--- a/app/views/tutorials/teacher/shared/qzb/_one.html.haml
+++ b/app/views/tutorials/teacher/shared/qzb/_one.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'qzb-milestone-1', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'm-teacher-quizzes', :options => "tipLocation:left;nubPosition:right" } }
+%ol.hide{ id: 'qzb-milestone-1', data: { :enable => 'm-teacher-quizzes', :onwards => :true }}
+  %li{ data: { id: 'm-teacher-quizzes', :options => "tipLocation:left;nubPosition:right" } }
     %h6= "#1"
     %p
       Click on <b>Quizzes</b> and then select <b>New</b> from the menu
