--- a/app/views/tutorials/teacher/shared/qzb/_seven.html.haml
+++ b/app/views/tutorials/teacher/shared/qzb/_seven.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'qzb-milestone-7' }
-  %li{ :data => { :id => 'left-1' } }
+%ol.hide{ id: 'qzb-milestone-7' }
+  %li{ data: { id: 'left-1' } }
     %h6= "#5"
     %p
       The quiz you just made is now listed here along with your other quizzes. 
