--- a/app/views/tutorials/teacher/shared/qzb/_six.html.haml
+++ b/app/views/tutorials/teacher/shared/qzb/_six.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'qzb-milestone-6', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'form-qzb', :options => "tipLocation:top;nubPosition:bottom" } }
+%ol.hide{ id: 'qzb-milestone-6', data: { :enable => 'm-teacher-quizzes', :onwards => :true }}
+  %li{ data: { id: 'form-qzb', :options => "tipLocation:top;nubPosition:bottom" } }
     %h6= "#4"
     %p
       When you are done picking questions, <b>give the quiz a name</b>. Any name is a good name 
