--- a/app/views/tutorials/teacher/shared/qzb/_three.html.haml
+++ b/app/views/tutorials/teacher/shared/qzb/_three.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'qzb-milestone-3', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'qzb-verticals-tab' } }
+%ol.hide{ id: 'qzb-milestone-3', data: { :enable => 'm-teacher-quizzes', :onwards => :true }}
+  %li{ data: { id: 'qzb-verticals-tab' } }
     %h6= "#2"
     %p
       Pick the <b>topics</b> you would like to see questions on. 
