--- a/app/views/tutorials/teacher/shared/send-suggestions/_one.html.haml
+++ b/app/views/tutorials/teacher/shared/send-suggestions/_one.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'suggest-questions-milestone-1', :data => { :enable => 'm-teacher-workbench', :onwards => :true }}
-  %li{ :data => { :id => 'm-teacher-workbench' } }
+%ol.hide{ id: 'suggest-questions-milestone-1', data: { :enable => 'm-teacher-workbench', :onwards => :true }}
+  %li{ data: { id: 'm-teacher-workbench' } }
     %h6= "#1"
     %p
       <b>Step 1:</b> Click on <b>Misc.</b> and then select <b>Suggest Question(s)</b> from the menu
