--- a/app/views/tutorials/teacher/uni/mng-sektions/_one.html.haml
+++ b/app/views/tutorials/teacher/uni/mng-sektions/_one.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'mng-sektions-milestone-1', :data => { :enable => 'm-teacher-workbench', :onwards => :true }}
-  %li{ :data => { :id => 'm-teacher-workbench' } }
+%ol.hide{ id: 'mng-sektions-milestone-1', data: { :enable => 'm-teacher-workbench', :onwards => :true }}
+  %li{ data: { id: 'm-teacher-workbench' } }
     %h6= "#1"
     %p
       Click here and then select <b>My Groups</b> from the menu
