--- a/app/views/tutorials/teacher/uni/mng-sektions/_three.html.haml
+++ b/app/views/tutorials/teacher/uni/mng-sektions/_three.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'mng-sektions-milestone-3', :data => { :enable => 'm-teacher-workbench' }}
-  %li{ :data => { :id => 'pane-mng-sektions-1' }} 
+%ol.hide{ id: 'mng-sektions-milestone-3', data: { :enable => 'm-teacher-workbench' }}
+  %li{ data: { id: 'pane-mng-sektions-1' }} 
     %h6= "#3"
     %p
       A new group has been created and will be listed here.
