--- a/app/views/tutorials/teacher/uni/mng-sektions/_two.html.haml
+++ b/app/views/tutorials/teacher/uni/mng-sektions/_two.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'mng-sektions-milestone-2', :data => { :enable => 'm-teacher-workbench', :onwards => :true }}
-  %li{ :data => { :id => 'lnk-add-sektion', :options => 'tipLocation:top;nubPosition:bottom' }} 
+%ol.hide{ id: 'mng-sektions-milestone-2', data: { :enable => 'm-teacher-workbench', :onwards => :true }}
+  %li{ data: { id: 'lnk-add-sektion', :options => 'tipLocation:top;nubPosition:bottom' }} 
     %h6= "#2"
     %p
       Click this button here
