--- a/app/views/tutorials/teacher/uni/publish/_one.html.haml
+++ b/app/views/tutorials/teacher/uni/publish/_one.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'publish-milestone-1', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'left-1' } }
+%ol.hide{ id: 'publish-milestone-1', data: { :enable => 'm-teacher-quizzes', :onwards => :true }}
+  %li{ data: { id: 'left-1' } }
     %h6= "#1"
     %p
       When you publish a worksheet, then each students gets his/her 
