--- a/app/views/tutorials/teacher/uni/publish/_two.html.haml
+++ b/app/views/tutorials/teacher/uni/publish/_two.html.haml
@@ -1,7 +1,7 @@
 
 
-%ol.hide{ :id => 'publish-milestone-2', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'left-1' } }
+%ol.hide{ id: 'publish-milestone-2', data: { :enable => 'm-teacher-quizzes', :onwards => :true }}
+  %li{ data: { id: 'left-1' } }
     %h6= "#2"
     %p
       These are the worksheets you have made for the selected quiz
