--- a/app/views/tutorials/teacher/uni/welcome/_one.html.haml
+++ b/app/views/tutorials/teacher/uni/welcome/_one.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'welcome-milestone-1', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'm-howto' }}
+%ol.hide{ id: 'welcome-milestone-1', data: { :onwards => :true }}
+  %li{ data: { id: 'm-howto' }}
     %p
       <b>Hello, and welcome to Gradians.com</b>
     %p
