--- a/app/views/admin/_mng-schools.html.haml
+++ b/app/views/admin/_mng-schools.html.haml
@@ -1,11 +1,11 @@
 
 %ul.nav.nav-tabs 
   %li
-    = simple_link :for => "Schools", :href => '#pane-schools', :id => 'tab-schools'
+    = simple_link for: "Schools", href: '#pane-schools', id: 'tab-schools'
   %li
-    = simple_link :for => "Contracts", :href => '#pane-contracts', :id => 'tab-contracts'
+    = simple_link for: "Contracts", href: '#pane-contracts', id: 'tab-contracts'
   %li
-    = simple_link :for => "Statements", :href => '#pane-cust-activity', :id => 'tab-see-activity'
+    = simple_link for: "Statements", href: '#pane-cust-activity', id: 'tab-see-activity'
 
 .tab-content
   #pane-schools.tab-pane.scroll
