--- a/app/views/customers/_activity.html.haml
+++ b/app/views/customers/_activity.html.haml
@@ -1,7 +1,7 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Statements", :id => 'tab-see-activity', :href => '#pane-cust-activity'
+    = simple_link for: "Statements", id: 'tab-see-activity', href: '#pane-cust-activity'
 .tab-content
   #pane-cust-activity.tab-pane.scroll
 
