--- a/app/views/examiners/_resolution-pending.html.haml
+++ b/app/views/examiners/_resolution-pending.html.haml
@@ -1,17 +1,17 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link :for => "Unresolved", :href => '#pane-resolution-pending', :id => 'tab-resolution-pending'
+    = simple_link for: "Unresolved", href: '#pane-resolution-pending', id: 'tab-resolution-pending'
 
 .tab-content
   #pane-resolution-pending.tab-pane
-    = simple_form_for :code, :remote => true, :url => resolve_path, 
-    :defaults => { :label => false, :required => false }, :html => { :id => 'form-resolve-scans' } do |f|
-      = f.input :a, :input_html => { :maxlength => 4 , :size => 4, :class => 'pull-left' }
-      = f.input :b, :input_html => { :maxlength => 4, :size => 4, :class => 'pull-left'  }
-      = f.input :c, :input_html => { :maxlength => 3, :size => 3, :class => 'pull-left'  }
-      = simple_button :icon => 'icon-qrcode', :class => 'btn-primary', :type => :submit
-      = simple_button :icon => 'icon-trash', :class => 'btn-danger', :type => :submit
+    = simple_form_for :code, remote: true, url: resolve_path, 
+    :defaults => { :label => false, :required => false }, :html => { id: 'form-resolve-scans' } do |f|
+      = f.input :a, :input_html => { :maxlength => 4 , :size => 4, class: 'pull-left' }
+      = f.input :b, :input_html => { :maxlength => 4, :size => 4, class: 'pull-left'  }
+      = f.input :c, :input_html => { :maxlength => 3, :size => 3, class: 'pull-left'  }
+      = simple_button :icon => 'icon-qrcode', class: 'btn-primary', :type => :submit
+      = simple_button :icon => 'icon-trash', class: 'btn-danger', :type => :submit
 
       .row-fluid.push-down
         #unresolved-scans
