--- a/app/views/examiners/_typeset-pending.html.haml
+++ b/app/views/examiners/_typeset-pending.html.haml
@@ -1,13 +1,13 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "New", :id => 'tab-typeset-new', :href => '#pane-typeset-new'
+    = simple_link for: "New", id: 'tab-typeset-new', href: '#pane-typeset-new'
   %li
-    = simple_link :for => "In Process", :id => 'tab-typeset-ongoing', :href => '#pane-typeset-ongoing'
+    = simple_link for: "In Process", id: 'tab-typeset-ongoing', href: '#pane-typeset-ongoing'
 
 .tab-content
   #pane-typeset-new.tab-pane
   #pane-typeset-ongoing.tab-pane
-    .accordion{ :id => 'sg-ongoing' }
+    .accordion{ id: 'sg-ongoing' }
       .accordion-group
 
