--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -70,7 +70,7 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span3{ :href => "#"}
+              %a.brand.span3{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
               %ul.nav.span8.pull-right
                 - for l in control_panel 
