--- a/app/views/menus/customer/_admin.html.haml
+++ b/app/views/menus/customer/_admin.html.haml
@@ -1,8 +1,8 @@
 
 %ul.dropdown-menu.dropdown-inverse#admin{ :role => :menu }
   %li
-    = simple_link :for => 'See Statements ', :id => 'lnk-see-activity', :icon => 'icon-list' 
+    = simple_link for: 'See Statements ', id: 'lnk-see-activity', :icon => 'icon-list' 
   %li
-    = simple_link :for => 'Raise Invoice', :id => 'lnk-gen-invoice', :icon => 'icon-shopping-cart'
+    = simple_link for: 'Raise Invoice', id: 'lnk-gen-invoice', :icon => 'icon-shopping-cart'
   %li
-    = simple_link :for => 'Apply Payment', :id => 'lnk-apply-payment', :icon => 'icon-envelope'
+    = simple_link for: 'Apply Payment', id: 'lnk-apply-payment', :icon => 'icon-envelope'
