--- a/app/views/menus/teacher/uni/_rc.html.haml
+++ b/app/views/menus/teacher/uni/_rc.html.haml
@@ -1,6 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-rc{ :role => :menu }
   %li
-    = simple_link :for => "Individual worksheets", :id => 'lnk-tc-rc', :icon => 'icon-list'
+    = simple_link for: "Individual worksheets", id: 'lnk-tc-rc', :icon => 'icon-list'
   %li
-    = simple_link :for => "Student proficiency in topic", :id => 'lnk-rc-deepdive', :icon => 'icon-signal'
+    = simple_link for: "Student proficiency in topic", id: 'lnk-rc-deepdive', :icon => 'icon-signal'
