--- a/app/views/modals/admin/_create-school.html.haml
+++ b/app/views/modals/admin/_create-school.html.haml
@@ -3,15 +3,15 @@
 
 #m-school-create-form.modal.regular.fade.row-fluid
   .span2
-    = image_tag 'notifications/add-user.png', :class => 'big-icon offset1'
+    = image_tag 'notifications/add-user.png', class: 'big-icon offset1'
   .span8
     #pane-register
       %p.title= "School Registration"
-      = simple_form_for school, :url => school_path, :validate => true, :remote => true, 
-      :defaults => { :required => false }, :html => { :id => 'fm-create-school' } do |f|
+      = simple_form_for school, url: school_path, :validate => true, remote: true, 
+      :defaults => { :required => false }, :html => { id: 'fm-create-school' } do |f|
         = f.input :name
         = f.input :phone
         = f.input :email
-        %input.hide{ :type => :string, :data => { :validate => false }, :name => 'teacher[guard]' } 
+        %input.hide{ :type => :string, data: { :validate => false }, :name => 'teacher[guard]' } 
         %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Create"
 
