--- a/app/views/modals/customer/_purchase.html.haml
+++ b/app/views/modals/customer/_purchase.html.haml
@@ -9,8 +9,8 @@
       %h1#headline.title= "Purchase Gredits"
       .small Gredits are our currency. They get you supervised exercises on Gradians.com
     .span6
-      = image_tag "landing/paypal-cards.jpg", :id => "img-payment-icons"
-    = simple_form_for payment, :url => buy_credits_path, :validate => true, :remote => true, :html => { :id => 'fm-buy-credits' }, :defaults => { :label => false } do |f|
+      = image_tag "landing/paypal-cards.jpg", id: "img-payment-icons"
+    = simple_form_for payment, url: buy_credits_path, :validate => true, remote: true, :html => { id: 'fm-buy-credits' }, :defaults => { :label => false } do |f|
       .row-fluid
         .span6
           %h3 Select Gredits and Currency
@@ -28,21 +28,21 @@
             .span8
               = f.date_select :expiration, :discard_day => true, :start_year => Date.today.year, :end_year => (Date.today.year+10), :use_two_digit_numbers => true, :order => [:month, :year], :date_separator => "/ ", :label => "Expires"
             .span4.pull-right
-              = f.input :card_verification, :placeholder => "CVV", :input_html => { :maxlength => 3, :class => "input-micro" }
+              = f.input :card_verification, :placeholder => "CVV", :input_html => { :maxlength => 3, class: "input-micro" }
           = f.input :name, :placeholder => "Name", :input_html => { :maxlength => 60 } 
           = f.input :email, :placeholder => "Email", :input_html => { :maxlength => 35 }
         .span6
           %h3 Amount Payable
-          = f.input :cash_value, :readonly => true, :input_html => { :id => "total-amt", :tabindex => -1 }
+          = f.input :cash_value, :readonly => true, :input_html => { id: "total-amt", :tabindex => -1 }
           %h3 Billing Address*
           = f.input :country, :priority => ["India", "United States", "United Kingdom"]
           = f.input :address1, :placeholder => "Address Line 1"
-          = f.input :city, :placeholder => "City", :input_html => { :id => 'test', :value => "Delhi" }
+          = f.input :city, :placeholder => "City", :input_html => { id: 'test', :value => "Delhi" }
           = f.input :state, :placeholder => "State / Province"
           = f.input :zip, :placeholder => "Postal Code (ZIP/PIN)"
       .row-fluid
         #message.alert.alert-error.hide
-        %button.btn.btn-inverse.btn-large.push-down.pull-left{ :type => :reset, :id => 'btn-reset' }= "Clear Form"
-        %button.btn.btn-primary.btn-large.push-down.pull-right{ :type => :submit, :id => 'btn-submit' }= "Buy Credits"
+        %button.btn.btn-inverse.btn-large.push-down.pull-left{ :type => :reset, id: 'btn-reset' }= "Clear Form"
+        %button.btn.btn-primary.btn-large.push-down.pull-right{ :type => :submit, id: 'btn-submit' }= "Buy Credits"
     %p *we do not store Credit Card or Address information  
 
