--- a/app/views/modals/customer/_refund.html.haml
+++ b/app/views/modals/customer/_refund.html.haml
@@ -8,23 +8,23 @@
     .span6
       %h1#headline.title= "Refund Gredits"
     .span6
-      = image_tag "landing/paypal.svg", :id => "img-payment-cons"
+      = image_tag "landing/paypal.svg", id: "img-payment-cons"
       .small Powered by PayPal
-    = simple_form_for payment, :url => refund_path, :validate => true, :remote => true, :html => { :id => 'fm-refund-credits' }, :defaults => { :label => false } do |f|
+    = simple_form_for payment, url: refund_path, :validate => true, remote: true, :html => { id: 'fm-refund-credits' }, :defaults => { :label => false } do |f|
       .row-fluid
         .span6
           %h3 Account Balance 
-          = f.input :credits, :readonly => true, :input_html => { :id => "total-amt", :tabindex => -2 , :value => "#{payment.credits} Gredits" }
+          = f.input :credits, :readonly => true, :input_html => { id: "total-amt", :tabindex => -2 , :value => "#{payment.credits} Gredits" }
           %h3 Refund to
           = f.input :name, :placeholder => "Name", :input_html => { :maxlength => 60, :value => "#{customer.account.loggable.name}" } 
         .span6
           %h3 Amount Refundable*
-          = f.input :cash_value, :readonly => true, :input_html => { :id => "total-amt", :tabindex => -1, :value => "#{payment.display_value}" }
+          = f.input :cash_value, :readonly => true, :input_html => { id: "total-amt", :tabindex => -1, :value => "#{payment.display_value}" }
           %h3 Email
           = f.input :email, :placeholder => "Refund to email", :input_html => { :maxlength => 35 , :value => "#{customer.account.email}" }
       .row-fluid
         #message.alert.alert-error.hide
-        %button.btn.btn-inverse.btn-large.push-down.pull-left{ :type => :reset, :id => 'btn-reset' }= "Clear Form"
-        %button.btn.btn-primary.btn-large.push-down.pull-right{ :type => :submit, :id => 'btn-submit' }= "Process Refund"
+        %button.btn.btn-inverse.btn-large.push-down.pull-left{ :type => :reset, id: 'btn-reset' }= "Clear Form"
+        %button.btn.btn-primary.btn-large.push-down.pull-right{ :type => :submit, id: 'btn-submit' }= "Process Refund"
     .small *You will receive an email from PayPal on how to access your refund. Amount refundable is calculated after deducting fees.
 
