--- a/app/views/modals/customer/_transfer.html.haml
+++ b/app/views/modals/customer/_transfer.html.haml
@@ -6,19 +6,19 @@
     %li#transfer
       %p.title= "Transfer Gredits"
 
-  = simple_form_for :transfer, :url => credits_transfer_path, :remote => true, 
-    :defaults => { :required => false, :label => false }, :html => { :id => 'fm-transfer' } do |f|
+  = simple_form_for :transfer, url: credits_transfer_path, remote: true, 
+    :defaults => { :required => false, :label => false }, :html => { id: 'fm-transfer' } do |f|
     - unless customer.nil?
       %input.hide{ :name => "transfer[donor_id]", :value => "#{customer.id}" }
     = f.input :recepient_email, as: :email, :placeholder => "Recepient Email"
-    = f.input :credits, as: :numeric, :placeholder => "Qty", :input_html => { :class => "input-micro" }
+    = f.input :credits, as: :numeric, :placeholder => "Qty", :input_html => { class: "input-micro" }
     -#.row-fluid
       .span8
         = f.input :recepient_email, as: :email, :placeholder => "Recepient Email"
       .span4
         .input-group
-          -#= f.input :quantity, as: :numeric, :input_html => { :id => 'quantity', step: 1 , :class => "input-micro" }
-          %input.numeric.input-micro{ :id => "quantity" }
+          -#= f.input :quantity, as: :numeric, :input_html => { id: 'quantity', step: 1 , class: "input-micro" }
+          %input.numeric.input-micro{ id: "quantity" }
           .input-group-btn
             .btn-group
               %button.btn.btn-inverse{ :type => :button, :icon => "icon-plus-sign" }
