--- a/app/views/modals/examiner/_reject.html.haml
+++ b/app/views/modals/examiner/_reject.html.haml
@@ -2,7 +2,7 @@
 #m-reject-dispute.modal.fade.regular
   .row-fluid
     .span3
-      = image_tag 'notifications/trash.png', :class => 'big-icon'
+      = image_tag 'notifications/trash.png', class: 'big-icon'
     .span8
       = simple_form_for :reject, remote: true, defaults: { label: false }, 
         html: { data: { action: "#{dispute_reject_path}?id=:id", id: 'tab-disputes' } } do |f|
