--- a/app/views/modals/shared/_upload-scans.html.haml
+++ b/app/views/modals/shared/_upload-scans.html.haml
@@ -4,15 +4,15 @@
   #m-upload-what.modal.fade.super-wide{ :role => :dialog }
     .row-fluid
       .span2
-        = image_tag 'quick-trial/upload.png', :class => 'big-icon offset1'
+        = image_tag 'quick-trial/upload.png', class: 'big-icon offset1'
       .span9
         %p.title= "What would you like to upload?"
-        .btn.btn-inverse.btn-large.upload.pull-left{:id => 'btn-upload-scans'}
+        .btn.btn-inverse.btn-large.upload.pull-left{id: 'btn-upload-scans'}
           Scans for Grading
           .small-text.orange= "PDF preferred. JPEG allowed"
           .progress.hide
             .bar
-        .btn.btn-inverse.btn-large.upload.pull-right{:id => 'btn-upload-sg'}
+        .btn.btn-inverse.btn-large.upload.pull-right{id: 'btn-upload-sg'}
           Questions
           .small-text.orange= "Word document, PDF, JPEG, Text file"
           .progress.hide
@@ -21,10 +21,10 @@
   #m-upload-what.modal.fade.regular{ :role => :dialog }
     .row-fluid
       .span3
-        = image_tag 'quick-trial/upload.png', :class => 'big-icon offset1'
+        = image_tag 'quick-trial/upload.png', class: 'big-icon offset1'
       .span8
         %h2= "Send Scans for Grading"
-        .btn.btn-inverse.btn-large.upload{:id => 'btn-upload-scans'}
+        .btn.btn-inverse.btn-large.upload{id: 'btn-upload-scans'}
           Select & Upload
           .small-text.orange= "PDF preferred. JPEG allowed"
           .progress.hide
