--- a/app/views/notifications/examiner/_last-scan.html.haml
+++ b/app/views/notifications/examiner/_last-scan.html.haml
@@ -1,7 +1,7 @@
 
-#n-last-scan.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 6000 } }
+#n-last-scan.modal.regular.hide.fade.row-fluid{ data: { :autohide => 6000 } }
   .span3
-    = image_tag 'notifications/last.png', :class => 'big-icon'
+    = image_tag 'notifications/last.png', class: 'big-icon'
   .span8
     %p.title.underline= "Last Scan"
     %p
