--- a/app/views/notifications/shared/_old-browser.html.haml
+++ b/app/views/notifications/shared/_old-browser.html.haml
@@ -1,7 +1,7 @@
 
-#n-old-browser.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 15000 } }
+#n-old-browser.modal.regular.hide.fade.row-fluid{ data: { :autohide => 15000 } }
   .span3
-    = image_tag 'notifications/old-browser.png', :class => 'big-icon'
+    = image_tag 'notifications/old-browser.png', class: 'big-icon'
   .span8
     %p.title.underline= "Old Browser?"
     %p
