--- a/app/views/notifications/shared/_question-received.html.haml
+++ b/app/views/notifications/shared/_question-received.html.haml
@@ -1,7 +1,7 @@
 
-#n-question-received.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 6000 } }
+#n-question-received.modal.regular.hide.fade.row-fluid{ data: { :autohide => 6000 } }
   .span3
-    = image_tag 'notifications/question.png', :class => 'big-icon'
+    = image_tag 'notifications/question.png', class: 'big-icon'
   .span8
     %p.title.underline
     %p.msg
