--- a/app/views/notifications/student/_regrade-disallowed.html.haml
+++ b/app/views/notifications/student/_regrade-disallowed.html.haml
@@ -1,7 +1,7 @@
 
 #n-regrade-disallowed.modal.fade.regular.row-fluid{ data: { autohide: 10000 } } 
   .span3
-    = image_tag 'notifications/alert.png', :class => 'big-icon'
+    = image_tag 'notifications/alert.png', class: 'big-icon'
   .span8
     %p.title.underline 
       Disputes blocked
