--- a/app/views/notifications/teacher/shared/_compiled.html.haml
+++ b/app/views/notifications/teacher/shared/_compiled.html.haml
@@ -1,7 +1,7 @@
 
-#n-compiled.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 6000 } }
+#n-compiled.modal.regular.hide.fade.row-fluid{ data: { :autohide => 6000 } }
   .span3
-    = image_tag 'notifications/document.png', :class => 'big-icon'
+    = image_tag 'notifications/document.png', class: 'big-icon'
   .span8
     %p.title.underline= "Worksheet(s) ready"
     %p
