--- a/app/views/notifications/teacher/shared/_edit-quiz.html.haml
+++ b/app/views/notifications/teacher/shared/_edit-quiz.html.haml
@@ -1,7 +1,7 @@
 
-#n-edit-quiz.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 6000 } }
+#n-edit-quiz.modal.regular.hide.fade.row-fluid{ data: { :autohide => 6000 } }
   .span3
-    = image_tag 'notifications/edit.png', :class => 'big-icon'
+    = image_tag 'notifications/edit.png', class: 'big-icon'
   .span8
     %p.title.underline
     %p.msg
