--- a/app/views/notifications/teacher/shared/_favourited.html.haml
+++ b/app/views/notifications/teacher/shared/_favourited.html.haml
@@ -1,7 +1,7 @@
 
-#n-favourited.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 5000 } }
+#n-favourited.modal.regular.hide.fade.row-fluid{ data: { :autohide => 5000 } }
   .span3
-    = image_tag 'notifications/favourite.png', :class => 'big-icon'
+    = image_tag 'notifications/favourite.png', class: 'big-icon'
   .span8
     %p.title.underline= "Added to favourites"
     %p
