--- a/app/views/notifications/teacher/shared/_qzb-no-selection.html.haml
+++ b/app/views/notifications/teacher/shared/_qzb-no-selection.html.haml
@@ -1,7 +1,7 @@
 
-#n-qzb-no-selection.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 7000 } }
+#n-qzb-no-selection.modal.regular.hide.fade.row-fluid{ data: { :autohide => 7000 } }
   .span3
-    = image_tag 'notifications/alert.png', :class => 'big-icon'
+    = image_tag 'notifications/alert.png', class: 'big-icon'
   .span8
     %p.title.underline= "No questions selected!"
     %p
