--- a/app/views/notifications/teacher/uni/_enrolled.html.haml
+++ b/app/views/notifications/teacher/uni/_enrolled.html.haml
@@ -1,6 +1,6 @@
 
-#n-enrolled.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 5000 } }
+#n-enrolled.modal.regular.hide.fade.row-fluid{ data: { :autohide => 5000 } }
   .span3
-    = image_tag 'notifications/add-user.png', :class => 'big-icon'
+    = image_tag 'notifications/add-user.png', class: 'big-icon'
   .span8
     %p.title
