--- a/app/views/notifications/teacher/uni/_share-error.html.haml
+++ b/app/views/notifications/teacher/uni/_share-error.html.haml
@@ -1,7 +1,7 @@
 
-#n-share-error.modal.regular.hide.fade.row-fluid{ :data => { :autohide => 7000 } }
+#n-share-error.modal.regular.hide.fade.row-fluid{ data: { :autohide => 7000 } }
   .span3
-    = image_tag 'notifications/alert.png', :class => 'big-icon'
+    = image_tag 'notifications/alert.png', class: 'big-icon'
   .span8
     %p.title.underline= "Error building quiz"
     %p
