--- a/app/views/teachers/shared/_edit-qz.html.haml
+++ b/app/views/teachers/shared/_edit-qz.html.haml
@@ -4,7 +4,7 @@
     = simple_link for: 'Remove Ques', href: '#pane-editqz-1', id: 'tab-editqz-1'
   %li
     = simple_link for: 'Add Topics', href: '#pane-editqz-2', id: 'tab-editqz-2',
-      :class => 'nopurge-on-show nopurge-on-inactive', :launch => 'editqz-milestone-3'
+      class: 'nopurge-on-show nopurge-on-inactive', :launch => 'editqz-milestone-3'
   %li
     = simple_link for: 'Add Ques', href: '#pane-editqz-3', id: 'tab-editqz-3'
 
