--- a/app/views/tutorials/teacher/shared/editqz/_five.html.haml
+++ b/app/views/tutorials/teacher/shared/editqz/_five.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'editqz-milestone-5', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'editqz-ul-milestone-4' } }
+%ol.hide{ id: 'editqz-milestone-5', data: { :onwards => :true }}
+  %li{ data: { id: 'editqz-ul-milestone-4' } }
     %h6= "#7"
     %p
       Click on a topic to see questions on it
