--- a/app/views/tutorials/teacher/shared/editqz/_six.html.haml
+++ b/app/views/tutorials/teacher/shared/editqz/_six.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'editqz-milestone-6', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'editqz-questions' }} 
+%ol.hide{ id: 'editqz-milestone-6', data: { :onwards => :true }}
+  %li{ data: { id: 'editqz-questions' }} 
     %h6= "#8"
     %p
       And then, pick the questions you would like to add to the quiz
