Changed .static to .precious
Thats what Gollum would say - my precioussss!

--- a/app/views/toolbox/grading/left/_pending.html.haml
+++ b/app/views/toolbox/grading/left/_pending.html.haml
@@ -13,5 +13,5 @@
 .tab-content
   #pane-grd-exams.tab-pane.purge-blind
   #pane-grd-questions.tab-pane.purge-blind
-  #pane-grd-panel.tab-pane.static
+  #pane-grd-panel.tab-pane.precious
     = render partial: 'toolbox/grading/left/rubric'
